<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFD">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:backgroundTint="@color/teal_200"
        android:cropToPadding="true"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/fredokaone_regular"
        android:text="@string/hello_sultan"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_notifications_24"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="-148dp"
        tools:listitem="@layout/card_item" />

    <com.rd.PageIndicatorView
        android:id="@+id/pageIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:piv_animationType="worm"
        app:piv_dynamicCount="true"
        app:piv_interactiveAnimation="true"
        app:piv_select="0"
        app:piv_selectedColor="@color/purple_500"
        app:piv_unselectedColor="@color/gray" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/fredokaone_regular"
        android:text="@string/featured"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageIndicatorView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_baseline_more_horiz_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="@id/cardView5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" >
        <ImageView
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_up"
            android:rotation="-90"
            android:layout_height="40dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/fredokaone_regular"
        android:text="@string/transfer"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView4"
        app:layout_constraintEnd_toStartOf="@id/cardView6"
        app:layout_constraintStart_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toTopOf="@+id/cardView4" >

        <ImageView
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_down"
            android:rotation="90"
            android:layout_height="40dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/fredokaone_regular"
        android:text="@string/request"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView5"
        app:layout_constraintEnd_toStartOf="@id/cardView7"
        app:layout_constraintStart_toEndOf="@+id/cardView5"
        app:layout_constraintTop_toTopOf="@+id/cardView5" >

        <ImageView
            android:layout_width="40dp"
            android:src="@drawable/ic_group_13"
            android:layout_gravity="center"
            android:layout_height="30dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/fredokaone_regular"
        android:text="@string/topup"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:foregroundGravity="center"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView6"
        app:layout_constraintTop_toTopOf="@+id/cardView6" >

        <ImageView
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_group_11"
            android:layout_height="40dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/fredokaone_regular"
        android:text="@string/bill"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView7"
        app:layout_constraintStart_toStartOf="@+id/cardView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/fredokaone_regular"
        android:text="@string/last_activity"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_baseline_more_horiz_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/activity_item"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />
</androidx.constraintlayout.widget.ConstraintLayout>